Fix weird extra gap in code blocks

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -9,8 +9,8 @@ code {
   font-family: @monospace-fonts;
 }
 
-pre {
-  padding-bottom: 0;
+pre code {
+  .hljs;
 }
 
 .footer {
